add education and skills pages

--- a/index.html
+++ b/index.html
@@ -205,6 +205,163 @@
           </div>
         </div>
       </section>
+
+      <section id="education" class="education">
+        <div class="container">
+          <div class="education__wrapper">
+            <h2 class="section-title education__title">
+              My <span>Journey</span> Through <span>Life</span>
+            </h2>
+            <div class="education__row">
+              <div class="education__column">
+                <h3 class="education__subtitle">Education</h3>
+                <div class="education__box">
+                  <div class="education__content">
+                    <div class="education__content-i">
+                      <div class="education__year">
+                        <i class="bx bx-calendar"></i>
+                        <p>2003 - 2008</p>
+                      </div>
+                      <h3>
+                        Development of Mineral Deposits - Donetsk National
+                        Technical University
+                      </h3>
+                      <p>
+                        Mining engineering, technical development, environmental
+                        protection, production management, economic analysis,
+                        health and safety at work
+                      </p>
+                    </div>
+                  </div>
+                  <div class="education__content">
+                    <div class="education__content-i">
+                      <div class="education__year">
+                        <i class="bx bx-calendar"></i>
+                        <p>2021 - 2022</p>
+                      </div>
+                      <h3>Full stack developer - IT School GoIT</h3>
+                      <p>
+                        Front-end development, back-end development, databases,
+                        server and hosting, version control, optimization and
+                        performance, development and testing
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="education__column">
+                <h3 class="education__subtitle">Experience</h3>
+                <div class="education__box">
+                  <div class="education__content">
+                    <div class="education__content-i">
+                      <div class="education__year">
+                        <i class="bx bx-calendar"></i>
+                        <p>2008 - present</p>
+                      </div>
+                      <h3>Mining engineer - Donbass excavation company</h3>
+                      <p>
+                        Mining management, personnel management from 30 to 70
+                        people, operational planning, monitoring compliance with
+                        labor protection rules, manufacturing documents
+                        management, planning and reporting
+                      </p>
+                    </div>
+                  </div>
+                  <div class="education__content">
+                    <div class="education__content-i">
+                      <div class="education__year">
+                        <i class="bx bx-calendar"></i>
+                        <p>2022 - present</p>
+                      </div>
+                      <h3>Freelance Software Developer - Self-employed</h3>
+                      <p>
+                        Freedom to choose projects, diverse projects,
+                        multitasking, adaptation to rapidly evolving
+                        technologies, responsibility for meeting project
+                        deadlines
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="skills" class="skills">
+        <!-- <div class="container"> -->
+        <h2 class="section-title skills__title">
+          Just a <span>God</span> of <span>Knoweledge</span> and
+          <span>Skills</span>
+        </h2>
+        <div class="skills__main">
+          <div class="skills__bar">
+            <div class="skills__info">
+              <p>HTML/CSS</p>
+              <p class="skills__percent">90%</p>
+            </div>
+            <div class="skills__slider">
+              <span class="skills__html"></span>
+            </div>
+          </div>
+          <div class="skills__bar">
+            <div class="skills__info">
+              <p>JavaScript</p>
+              <p class="skills__percent">65%</p>
+            </div>
+            <div class="skills__slider">
+              <span class="skills__javascript"></span>
+            </div>
+          </div>
+          <div class="skills__bar">
+            <div class="skills__info">
+              <p>React JS</p>
+              <p class="skills__percent">50%</p>
+            </div>
+            <div class="skills__slider">
+              <span class="skills__react"></span>
+            </div>
+          </div>
+          <div class="skills__bar">
+            <div class="skills__info">
+              <p>REST API</p>
+              <p class="skills__percent">55%</p>
+            </div>
+            <div class="skills__slider">
+              <span class="skills__api"></span>
+            </div>
+          </div>
+          <div class="skills__bar">
+            <div class="skills__info">
+              <p>Node.js</p>
+              <p class="skills__percent">30%</p>
+            </div>
+            <div class="skills__slider">
+              <span class="skills__node"></span>
+            </div>
+          </div>
+          <div class="skills__bar">
+            <div class="skills__info">
+              <p>Express</p>
+              <p class="skills__percent">30%</p>
+            </div>
+            <div class="skills__slider">
+              <span class="skills__express"></span>
+            </div>
+          </div>
+          <div class="skills__bar">
+            <div class="skills__info">
+              <p>MongoDB</p>
+              <p class="skills__percent">25%</p>
+            </div>
+            <div class="skills__slider">
+              <span class="skills__mongo"></span>
+            </div>
+          </div>
+        </div>
+        <!-- </div> -->
+      </section>
     </main>
 
     <script src="./js/mobileMenu.js"></script>
