--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     </main>
 
     <script src="./js/mobileMenu.js"></script>
-    <script src="./js/gallery.js" type="module"></script>
+    <script src="js/gallery.js" type="module"></script>
     <script src="./js/slider.js" defer></script>
   </body>
 </html>
