--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/main.css" />
-    <!-- <script src="./js/slider.js" ></script> -->
     <title>Portfolio</title>
   </head>
   <body>
@@ -374,8 +373,8 @@
       </section>
     </main>
 
-    <script src="./js/mobileMenu.js"></script>
-    <script src="js/gallery.js" type="module"></script>
-    <script src="./js/slider.js" defer></script>
+    <script src="./js/mobileMenu.js" type="module"></script>
+    <script src="./js/gallery.js" type="module"></script>
+    <script src="./js/slider.js" type="module" defer></script>
   </body>
 </html>
