--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
       </section>
     </main>
 
+    <script src="./js/projectsData.js" type="module"></script>
     <script src="./js/mobileMenu.js" type="module"></script>
     <script src="./js/gallery.js" type="module"></script>
     <script src="./js/slider.js" type="module" defer></script>
