--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
     <!-- <script src="./js/projectsData.js" type="module"></script> -->
     <script src="./js/mobileMenu.js" type="module"></script>
-    <script src="./js/gallery.js" type="module"></script>
+    <script src="./js/gallery.js" type="module" defer></script>
     <script src="./js/slider.js" type="module" defer></script>
   </body>
 </html>
