--- a/index.html
+++ b/index.html
@@ -366,14 +366,16 @@
           My <span>Successes</span> and <span>Failures</span>
         </h2>
         <div class="project__wrapper">
-          <i id="left" class="bx bx-chevron-left"></i>
-          <ul class="project__carousel"></ul>
-          <i id="right" class="bx bx-chevron-right"></i>
+          <!-- <i id="arrow-left" class="bx bx-chevron-left"></i> -->
+          <ul id="slider-img" class="project__carousel"></ul>
+          <!-- <i id="arrow-right" class="bx bx-chevron-right"></i> -->
         </div>
       </section>
+
+      <div class="modal"></div>
     </main>
 
-    <!-- <script src="./js/projectsData.js" type="module"></script> -->
+    <script src="./js/modal.js" type="module" defer></script>
     <script src="./js/mobileMenu.js" type="module"></script>
     <script src="./js/gallery.js" type="module" defer></script>
     <script src="./js/slider.js" type="module" defer></script>
