add next slider

--- a/index.html
+++ b/index.html
@@ -362,15 +362,311 @@
       </section>
 
       <section id="project" class="project">
+        <div class="project__slider">
+          <button id="next" class="project__btn btn-next">></button>
+          <button id="prev" class="project__btn btn-prev"><</button>
+        </div>
+      </section>
+
+      <!-- <div id="project" class="slider">
+        <div class="list">
+          <div class="item active">
+            <img src="./image/projectsImg/desktop/img-1.png" alt="" />
+            <div class="content">
+              <p>React | Node.js | MongoDB</p>
+              <h2>Social network for communication in English</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/dear_penfriend"
+                  >Git Repo</a
+                >
+                <a href="https://dear-penfriend.netlify.app/">Demo</a>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-2.png" alt="" />
+            <div class="content">
+              <p>Angular | HTML | CSS</p>
+              <h2>Burger restaurant</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/burgers">Git Repo</a>
+                <a href="https://artemyakushkin.github.io/burgers/">Demo</a>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-3.png" alt="" />
+            <div class="content">
+              <p>React | Node.js | MongoDB</p>
+              <h2>Application for calculating the number of calories</h2>
+              <div class="btn-box">
+                <a
+                  href="https://github.com/ArtemYakushkin/slim-mom-project-react"
+                  >Git Repo</a
+                >
+                <a
+                  href="https://artemyakushkin.github.io/slim-mom-project-react/home"
+                  >Demo</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-4.png" alt="" />
+            <div class="content">
+              <p>React | Rest API</p>
+              <h2>Image search service</h2>
+              <div class="btn-box">
+                <a
+                  href="https://github.com/ArtemYakushkin/goit-react-hw-04-images/tree/main"
+                  >Git Repo</a
+                >
+                <a
+                  href="https://artemyakushkin.github.io/goit-react-hw-04-images/"
+                  >Demo</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-5.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS | JavaScript</p>
+              <h2>Ice cream sales website</h2>
+              <div class="btn-box">
+                <a
+                  href="https://github.com/ArtemYakushkin/team-project-iceCream"
+                  >Git Repo</a
+                >
+                <a
+                  href="https://artemyakushkin.github.io/team-project-iceCream/"
+                  >Demo</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-6.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS | JavaScript | Rest API</p>
+              <h2>Movie search application</h2>
+              <div class="btn-box">
+                <a
+                  href="https://github.com/ArtemYakushkin/team-project-js-Filmoteka"
+                  >Git Repo</a
+                >
+                <a
+                  href="https://artemyakushkin.github.io/team-project-js-Filmoteka/"
+                  >Demo</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-7.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS | JavaScript</p>
+              <h2>Website for the production and sale of paper cups</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/paknet">Git Repo</a>
+                <a href="https://artemyakushkin.github.io/paknet/">Demo</a>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-8.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS | JavaScript</p>
+              <h2>Landing site for advertising the Xiaomi Himo C26 bicycle</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/xiaomi-bike"
+                  >Git Repo</a
+                >
+                <a
+                  href="https://artemyakushkin.github.io/xiaomi-bike/#specification"
+                  >Demo</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-9.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS</p>
+              <h2>Landing site for a photo studio</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/photo-studio-2"
+                  >Git Repo</a
+                >
+                <a href="https://artemyakushkin.github.io/photo-studio-2/"
+                  >Demo</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-10.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS | Gulp</p>
+              <h2>Furniture store website</h2>
+              <div class="btn-box">
+                <a
+                  href="https://github.com/ArtemYakushkin/furniture-design/tree/main"
+                  >Git Repo</a
+                >
+                <a href="https://desire-furniture-design.netlify.app/">Demo</a>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-11.png" alt="" />
+            <div class="content">
+              <p>HTML | CSS</p>
+              <h2>Landing site for Mercedes-Benz</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/mercedes-avatar"
+                  >Git Repo</a
+                >
+                <a href="https://artemyakushkin.github.io/mercedes-avatar/"
+                  >Demo</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-12.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS | JavaScript</p>
+              <h2>Barbershop landing site</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/barbershop"
+                  >Git Repo</a
+                >
+                <a href="https://artemyakushkin.github.io/barbershop/">Demo</a>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-13.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS | JavaScript</p>
+              <h2>Landing site for web studio</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/WebStudio"
+                  >Git Repo</a
+                >
+                <a href="https://artemyakushkin.github.io/WebStudio/index.html"
+                  >Demo</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-14.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS | JavaScript</p>
+              <h2>Landing site for modern bakery</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/modern_bakery"
+                  >Git Repo</a
+                >
+                <a href="https://artemyakushkin.github.io/modern_bakery/"
+                  >Demo</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-15.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS | JavaScript</p>
+              <h2>Landing site for beauty saloon</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/beauty_zone"
+                  >Git Repo</a
+                >
+                <a href="https://artemyakushkin.github.io/beauty_zone/">Demo</a>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/desktop/img-16.png" alt="" />
+            <div class="content">
+              <p>HTML | SCSS</p>
+              <h2>Landing site for Bose</h2>
+              <div class="btn-box">
+                <a href="https://github.com/ArtemYakushkin/bose">Git Repo</a>
+                <a href="https://artemyakushkin.github.io/bose/">Demo</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="arrows">
+          <button id="prev"><</button>
+          <button id="next">></button>
+        </div>
+        <div class="thumbnail">
+          <div class="item active">
+            <img src="./image/projectsImg/mobile/img-1-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-2-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-3-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-4-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-5-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-6-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-7-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-8-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-9-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-10-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-11-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-12-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-13-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-14-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-15-mob.png" alt="" />
+          </div>
+          <div class="item">
+            <img src="./image/projectsImg/mobile/img-16-mob.png" alt="" />
+          </div>
+        </div>
+      </div> -->
+
+      <!-- <section id="project" class="project">
         <h2 class="section-title project__title">
           My <span>Successes</span> and <span>Failures</span>
         </h2>
         <div class="project__wrapper">
-          <!-- <i id="arrow-left" class="bx bx-chevron-left"></i> -->
+          <i id="arrow-left" class="bx bx-chevron-left"></i>
           <ul id="slider-img" class="project__carousel"></ul>
-          <!-- <i id="arrow-right" class="bx bx-chevron-right"></i> -->
+          <i id="arrow-right" class="bx bx-chevron-right"></i>
         </div>
-      </section>
+      </section> -->
 
       <div class="modal"></div>
     </main>
