end section project

--- a/index.html
+++ b/index.html
@@ -362,6 +362,9 @@
       </section>
 
       <section id="project" class="project">
+        <h2 class="section-title project__title">
+          My <span>Successes</span> and <span>Failures</span>
+        </h2>
         <div class="project__slider">
           <button id="next" class="project__btn btn-next">></button>
           <button id="prev" class="project__btn btn-prev"><</button>
