--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
       <section id="project" class="project">
         <h2 class="section-title project__title">
-          My <span>Successes</span> and <span>Failures</span>
+          My <span>Rollercoaster</span> of <span>Projects</span>
         </h2>
         <div class="project__slider">
           <button id="next" class="project__btn btn-next">></button>
@@ -372,9 +372,9 @@
       </section>
     </main>
 
-    <script src="./js/modal.js" type="module" defer></script>
     <script src="./js/mobileMenu.js" type="module"></script>
     <script src="./js/gallery.js" type="module" defer></script>
     <script src="./js/slider.js" type="module" defer></script>
+    <script src="./js/modal.js" type="module" defer></script>
   </body>
 </html>
