--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="container">
         <div class="header__wrapper">
-          <a href="#" class="logo">ArtemY.</a>
+          <a href="#home" class="logo">ArtemY.</a>
           <nav className="header__nav">
             <ul class="header__list">
               <li class="header__item">
@@ -130,7 +130,7 @@
                   articles. But be careful, it might be contagious!
                 </p>
                 <div class="home__btn-box">
-                  <a class="home__btn" href="#">
+                  <a class="home__btn" href="#contacts">
                     <i class="bx bxs-contact"></i>
                     Contact Me
                   </a>
@@ -143,7 +143,7 @@
               <div class="home__sci">
                 <a
                   class="home__sci-link"
-                  href="#"
+                  href="https://github.com/ArtemYakushkin"
                   target="_blank"
                   rel="noreferrer"
                 >
@@ -151,7 +151,7 @@
                 </a>
                 <a
                   class="home__sci-link"
-                  href="#"
+                  href="https://www.instagram.com/yakushkin_artem_/"
                   target="_blank"
                   rel="noreferrer"
                 >
@@ -159,7 +159,7 @@
                 </a>
                 <a
                   class="home__sci-link"
-                  href="#"
+                  href="https://www.linkedin.com/in/artem-yakushkin-a86722229/"
                   target="_blank"
                   rel="noreferrer"
                 >
@@ -371,6 +371,80 @@
         </div>
       </section>
     </main>
+
+    <footer id="contacts" class="footer">
+      <div class="container">
+        <h2 class="section-title footer__title">
+          Call <span>or</span> write <span>Me!</span>
+        </h2>
+        <div class="footer__wrapper">
+          <div class="footer__left">
+            <a href="#home" class="logo footer__logo">ArtemY.</a>
+            <div class="footer__sci">
+              <a
+                class="footer__sci-link"
+                href="https://github.com/ArtemYakushkin"
+                target="_blank"
+                rel="noreferrer"
+              >
+                <i class="bx bxl-github"></i>
+              </a>
+              <a
+                class="footer__sci-link"
+                href="https://www.instagram.com/yakushkin_artem_/"
+                target="_blank"
+                rel="noreferrer"
+              >
+                <i class="bx bxl-instagram-alt"></i>
+              </a>
+              <a
+                class="footer__sci-link"
+                href="https://www.linkedin.com/in/artem-yakushkin-a86722229/"
+                target="_blank"
+                rel="noreferrer"
+              >
+                <i class="bx bxl-linkedin"></i>
+              </a>
+            </div>
+          </div>
+          <div class="footer__right">
+            <div class="footer__info">
+              <div class="footer__subtitle-box">
+                <i class="bx bxs-phone-call"></i>
+                <p class="footer__subtitle">Phone number</p>
+              </div>
+              <a href="tel:+380507025708" class="footer__link">
+                +38 050 702 5 708
+              </a>
+            </div>
+            <div class="footer__info">
+              <div class="footer__subtitle-box">
+                <i class="bx bx-envelope"></i>
+                <p class="footer__subtitle">Email Address</p>
+              </div>
+              <a
+                href="mailto:artem.frontdeveloper@gmail.com"
+                class="footer__link"
+              >
+                artem.frontdeveloper@gmail.com
+              </a>
+            </div>
+            <div class="footer__info">
+              <div class="footer__subtitle-box">
+                <i class="bx bxl-telegram"></i>
+                <p class="footer__subtitle">Telegram</p>
+              </div>
+              <a
+                href="tg://resolve?domain=@ArtemYakushkin"
+                class="footer__link"
+              >
+                @ArtemYakushkin
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="./js/mobileMenu.js" type="module"></script>
     <script src="./js/gallery.js" type="module" defer></script>
